# Milkshake

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: autoupdate.yml  rust.yml
cuda/: cudnn_network.cu  loss.cu
src/: buffer.cu  buffer.h  cudnn_network.rs  environment.rs  halfcheetahenv.rs  main.cu  main.rs  mujoco.rs  optim.rs  optimizer.rs  pch.cpp  pch.h  replay_buffer.rs  stockenv.rs  stockframe.cu  stockframe.h  stockframe.rs  td3.rs  tests.rs  viewer.rs  wrappers.rs
src/cpp/: cmaes.cpp  cmaes.h
src/cudnn_network/: blob.rs  cudnn_layer.rs  cudnn_network.rs  loss.rs
src/environment/: antenv.rs  halfcheetahenv.rs  hopperenv.rs
src/mujoco/: ant.xml  halfcheetah.xml  hopper.xml
src/optim/: adam.rs  optimizer.rs
src/optimizer/: adam.rs  cmaes.rs
src/wrappers/: mujoco.rs  mujoco_wrapper.h  talib.rs  talib_wrapper.h
