[package]
name = "Milkshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.4"

[dependencies]
anyhow = "1.0.79"
curl = "0.4.44"
dotenv = "0.15.0"
glfw-bindgen = "0.1.1"
lazy_static = "1.4.0"
libc = "0.2.153"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.196"
serde_json = "1.0.113"
ta-lib-sys = "0.1.2"
tch = "0.15.0"

clap = { version = "4.4.18", features = ["derive"] }
polars = { version = "0.37.0", features = ["cross_join", "cum_agg", "json", "lazy", "ndarray", "strings"] }
