[package]
name = "Milkshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.4"

[dependencies]
anyhow = "1.0.86"
curl = "0.4.46"
dotenv = "0.15.0"
glfw-bindgen = "0.1.1"
lazy_static = "1.4.0"
libc = "0.2.155"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.203"
serde_json = "1.0.117"
tch = "0.16.0"

clap = { version = "4.5.7", features = ["derive"] }
polars = { version = "0.40.0", features = ["cross_join", "cum_agg", "json", "lazy", "ndarray", "regex", "strings"] }
